--- a/assets/css/inscription.css
+++ b/assets/css/inscription.css
@@ -36,14 +36,14 @@ main{
   flex-direction: column;
 }
 
-.clock_container{
+.title_container{
   height: 25%;
   width: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.clock_container h2{
+.title_container h2{
   color: #F03A47;
   font-family: "Play", sans-serif;
   font-size: 35px;
@@ -51,7 +51,7 @@ main{
   margin: auto;
 }
 
-.clock_container hr{
+.title_container hr{
   border: 2px solid #F03A47;
   width: 50%;
   margin: auto;
@@ -74,7 +74,32 @@ main{
   margin: auto auto 0 auto;
 }
 
-.form_container button{
+form{
+  margin: auto;
+  height: 75%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+form .input{
+  margin: 5px auto;
+  height: 30px;
+  width: 250px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding-left: 5px;
+  font-family: "Play", sans-serif;
+  font-size: 16px;
+}
+
+form .input:focus{
+  border: 2px solid #F03A47;
+  color: #F03A47;
+}
+
+.form_container .sender{
   height: 35px;
   width: 140px;
   border: none;
@@ -85,6 +110,38 @@ main{
   font-size: 18px;
   font-weight: normal;
   margin: auto;
+}
+
+.wrapper_icon{
+  margin: auto;
+  height: 75%;
+  width: 80%;
+  display: flex;
+}
+
+.container_icon{
+  margin: auto;
+  height: 70%;
+  width: 15%;
+  border-radius: 20px;
+  transition: ease-in-out;
+  transition-duration: 0.2s;
+  display: flex;
+  flex-direction: column;
+  background-color: #142431;
+}
+
+.container_icon img{
+  height: 70%;
+  width: 90%;
+  margin: auto;
+}
+
+.container_icon p{
+  margin: auto;
+  color: #fff;
+  font-family: "Play", sans-serif;
+  font-size: 14px;
 }
 
 .footer{
@@ -112,7 +169,7 @@ main{
     font-size: 70px;
   }
 
-  .clock_container h2{
+  .title_container h2{
     font-size: 55px;
   }
 
@@ -133,7 +190,7 @@ main{
 
 @media screen and (min-width: 1024px){
 
-  .clock_container hr{
+  .title_container hr{
     width: 25%;
   }
 }
