--- a/assets/css/leaderBoard.css
+++ b/assets/css/leaderBoard.css
@@ -22,21 +22,46 @@ html, body, main{
   height: 150px;
   width: 85%;
   display: flex;
-  background-color: red;
+  background-color: #1E2E3B;
   margin: 0px auto;
-  margin-bottom: 20px;
   padding: 2%;
-  border-radius: 8px;
 }
 
 .container_icon{
   height: 100%;
   width: 10%;
-  background: green;
 }
 
 .container_information{
   height: 100%;
-  width: 90%;
-  background-color: yellow;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container_information h2{
+  margin: auto 0px;
+  color: #fff;
+  font-family: "Play", sans-serif;
+  font-size: 35px;
+}
+
+.container_information p{
+  margin: auto 0px;
+  color: #fff;
+  font-family: "Play", sans-serif;
+  font-size: 25px;
+}
+
+.container_score{
+  height: 100%;
+  width: 10%;
+  display: flex;
+}
+
+.container_score p{
+  margin: auto;
+  color: #fff;
+  font-family: "Play", sans-serif;
+  font-size: 30px;
 }
