--- a/assets/css/activite_dashboard.css
+++ b/assets/css/activite_dashboard.css
@@ -38,8 +38,23 @@ header h1{
 }
 
 .switcher_score{
+  margin: auto;
   height: 50%;
   width: 85%;
   display: flex;
   background-color: grey;
+}
+
+.selector{
+  margin: auto;
+  height: 100%;
+  width: 10%;
+  background-color: red;
+}
+
+.switcher_score h3{
+  color: #fff;
+  font-size: 30px;
+  font-family: "Play", sans-serif;
+  font-weight: bold;
 }
