--- a/assets/css/leaderBoard.css
+++ b/assets/css/leaderBoard.css
@@ -9,18 +9,34 @@ html, body, main{
   height: 100%;
 }
 
+.page_title{
+  height: 15%;
+  width: 100%;
+  display: flex;
+}
+
+.page_title h1{
+  margin: auto;
+  color: #F03A47;
+  font-family: "Play", sans-serif;
+  font-size: 45px;
+}
+
+.page_title span{
+  color: #fff;
+}
+
 .wrapper_leaderBoard{
   min-height: 90%;
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding-top: 10%;
-  padding-bottom: 5%;
+  padding-bottom: 30%;
 }
 
 .container_equipe{
-  height: 150px;
-  width: 85%;
+  height: 160px;
+  width: 95%;
   display: flex;
   background-color: #1E2E3B;
   margin: 0px auto;
@@ -29,18 +45,20 @@ html, body, main{
 
 .container_icon{
   height: 100%;
-  width: 10%;
+  width: 25%;
+  display: flex;
 }
 
 .container_icon img{
   margin: auto;
-  height: 70%;
-  width: 60%;
+  height: 40%;
+  width: 95%;
 }
 
 .container_information{
   height: 100%;
-  width: 80%;
+  width: 60%;
+  padding: 2%;
   display: flex;
   flex-direction: column;
 }
@@ -49,25 +67,137 @@ html, body, main{
   margin: auto 0px;
   color: #fff;
   font-family: "Play", sans-serif;
-  font-size: 35px;
+  font-size: 28px;
 }
 
 .container_information p{
   margin: auto 0px;
   color: #fff;
   font-family: "Play", sans-serif;
-  font-size: 25px;
+  font-size: 18px;
 }
 
 .container_score{
   height: 100%;
-  width: 10%;
+  width: 30%;
   display: flex;
 }
 
-.container_score p{
+.container_score h5{
   margin: auto;
   color: #fff;
   font-family: "Play", sans-serif;
-  font-size: 30px;
+  font-size: 25px;
+}
+
+@media screen and (min-width: 425px){
+
+  .page_title h1{
+    font-size: 55px;
+  }
+  .container_information h2{
+    font-size: 30px;
+  }
+
+  .container_information p{
+    font-size: 25px;
+  }
+
+  .container_score h5{
+    font-size: 28px;
+  }
+
+  .container_icon img{
+    height: 55%;
+  }
+
+}
+
+@media screen and (min-width: 640px){
+
+  .container_icon img{
+    height: 65%;
+  }
+
+  .container_equipe{
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 768px){
+
+  .page_title h1{
+    font-size: 65px;
+  }
+
+  .container_information h2{
+    font-size: 35px;
+  }
+
+  .container_information p{
+    font-size: 30px;
+  }
+
+  .container_score h5{
+    font-size: 32px;
+  }
+
+  .container_icon img{
+    height: 80%;
+  }
+}
+
+@media screen and (min-width: 1024px){
+
+  .container_icon img{
+    height: 80%;
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1200px){
+
+  .page_title h1{
+    font-size: 75px;
+  }
+
+  .container_information h2{
+    font-size: 40px;
+  }
+
+  .container_information p{
+    font-size: 32px;
+  }
+
+  .container_score h5{
+    font-size: 35px;
+  }
+}
+
+@media screen and (min-width: 1700px){
+
+  .page_title h1{
+    font-size: 115px;
+  }
+
+  .container_information h2{
+    font-size: 70px;
+  }
+
+  .container_information p{
+    font-size: 52px;
+  }
+
+  .container_score h5{
+    font-size: 55px;
+  }
+
+  .container_icon img{
+    height: 90%;
+    width: 70%;
+  }
+
+  .container_equipe{
+    height: 280px;
+  }
 }
