--- a/assets/css/activite_dashboard.css
+++ b/assets/css/activite_dashboard.css
@@ -5,17 +5,21 @@ body{
   flex-direction: column;
 }
 
-header{
-  height: 10%;
+.page_title{
+  height: 15%;
   width: 100%;
   display: flex;
 }
 
-header h1{
+.page_title h1{
   margin: auto;
-  color: #fff;
+  color: #F03A47;
   font-family: "Play", sans-serif;
-  font-size: 30px;
+  font-size: 45px;
+}
+
+.page_title span{
+  color: #fff;
 }
 
 .score_container{
@@ -27,32 +31,42 @@ header h1{
 .score_container h2{
   margin: auto;
   font-family: "Play", sans-serif;
-  color: red;
+  color: #F03A47;
   font-size: 40px;
 }
 
 .switcher_score_container{
   height: 40%;
-  width: 100%;
+  width: 85%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.switcher_container{
+  margin: auto;
+  height: 30%;
+  width: 40%;
   display: flex;
 }
 
 .switcher_score{
   margin: auto;
-  height: 50%;
-  width: 85%;
+  height: 100%;
+  width: 60%;
   display: flex;
-  background-color: grey;
 }
 
 .selector{
   margin: auto;
   height: 100%;
-  width: 10%;
+  width: 20%;
   background-color: red;
+  border-radius: 8px;
 }
 
 .switcher_score h3{
+  margin: auto;
   color: #fff;
   font-size: 30px;
   font-family: "Play", sans-serif;
