--- a/assets/css/accueil.css
+++ b/assets/css/accueil.css
@@ -106,6 +106,14 @@ main{
   text-decoration: none;
 }
 
+@media screen and (max-width: 440px){
+  .title_container{
+    width: 85%;
+    text-align: center;
+    margin: auto;
+  }
+}
+
 @media screen and (min-width: 768px){
 
   header h1{
