--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -31,3 +31,23 @@ html, body, main{
   height: 85%;
   margin: auto;
 }
+
+.errorMessage{
+  color: #F03A47;
+  font-family: "Rubik", sans-serif;
+  font-size: 25px;
+  width: 80%;
+  text-align: center;
+  font-weight: normal;
+  margin: auto;
+}
+
+.successMessage{
+  color: #43C02C;
+  font-family: "Rubik", sans-serif;
+  font-size: 25px;
+  width: 80%;
+  text-align: center;
+  font-weight: normal;
+  margin: auto;
+}
